// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot > matches snapshot when unchecked 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <fieldset
        class="flex flex-col gap-4"
      >
        <div
          class="flex items-center [&>*]:cursor-pointer"
          data-testid="udp-radio-button-group-option"
        >
          <input
            class="h-4 w-4 appearance-none rounded-full border border-gray-300 bg-gray-100 bg-[length:1em_1em] bg-center bg-no-repeat checked:border-transparent checked:bg-current checked:bg-dot-icon focus:outline-none focus:ring-2 focus:ring-offset-2 dark:border-gray-600 dark:bg-gray-700 dark:checked:border-transparent dark:checked:bg-current text-primary-600 focus:ring-primary-600 dark:ring-offset-gray-800 dark:focus:ring-primary-600"
            id="test-radio-button-group_test-value-1"
            name="test-radio-button-group"
            type="radio"
            value="test-value-1"
          />
          <label
            class="text-sm font-medium text-gray-900 dark:text-white pl-2 line-clamp-1"
            data-testid="flowbite-label"
            for="test-radio-button-group_test-value-1"
          >
            test-label-1
          </label>
        </div>
        <div
          class="flex items-center [&>*]:cursor-pointer"
          data-testid="udp-radio-button-group-option"
        >
          <input
            class="h-4 w-4 appearance-none rounded-full border border-gray-300 bg-gray-100 bg-[length:1em_1em] bg-center bg-no-repeat checked:border-transparent checked:bg-current checked:bg-dot-icon focus:outline-none focus:ring-2 focus:ring-offset-2 dark:border-gray-600 dark:bg-gray-700 dark:checked:border-transparent dark:checked:bg-current text-primary-600 focus:ring-primary-600 dark:ring-offset-gray-800 dark:focus:ring-primary-600"
            id="test-radio-button-group_test-value-2"
            name="test-radio-button-group"
            type="radio"
            value="test-value-2"
          />
          <label
            class="text-sm font-medium text-gray-900 dark:text-white pl-2 line-clamp-1"
            data-testid="flowbite-label"
            for="test-radio-button-group_test-value-2"
          >
            test-label-2
          </label>
        </div>
        <div
          class="flex items-center [&>*]:cursor-pointer"
          data-testid="udp-radio-button-group-option"
        >
          <input
            class="h-4 w-4 appearance-none rounded-full border border-gray-300 bg-gray-100 bg-[length:1em_1em] bg-center bg-no-repeat checked:border-transparent checked:bg-current checked:bg-dot-icon focus:outline-none focus:ring-2 focus:ring-offset-2 dark:border-gray-600 dark:bg-gray-700 dark:checked:border-transparent dark:checked:bg-current text-primary-600 focus:ring-primary-600 dark:ring-offset-gray-800 dark:focus:ring-primary-600"
            id="test-radio-button-group_test-value-3"
            name="test-radio-button-group"
            type="radio"
            value="test-value-3"
          />
          <label
            class="text-sm font-medium text-gray-900 dark:text-white pl-2 line-clamp-1"
            data-testid="flowbite-label"
            for="test-radio-button-group_test-value-3"
          >
            test-label-3
          </label>
        </div>
      </fieldset>
    </div>
  </body>,
  "container": <div>
    <fieldset
      class="flex flex-col gap-4"
    >
      <div
        class="flex items-center [&>*]:cursor-pointer"
        data-testid="udp-radio-button-group-option"
      >
        <input
          class="h-4 w-4 appearance-none rounded-full border border-gray-300 bg-gray-100 bg-[length:1em_1em] bg-center bg-no-repeat checked:border-transparent checked:bg-current checked:bg-dot-icon focus:outline-none focus:ring-2 focus:ring-offset-2 dark:border-gray-600 dark:bg-gray-700 dark:checked:border-transparent dark:checked:bg-current text-primary-600 focus:ring-primary-600 dark:ring-offset-gray-800 dark:focus:ring-primary-600"
          id="test-radio-button-group_test-value-1"
          name="test-radio-button-group"
          type="radio"
          value="test-value-1"
        />
        <label
          class="text-sm font-medium text-gray-900 dark:text-white pl-2 line-clamp-1"
          data-testid="flowbite-label"
          for="test-radio-button-group_test-value-1"
        >
          test-label-1
        </label>
      </div>
      <div
        class="flex items-center [&>*]:cursor-pointer"
        data-testid="udp-radio-button-group-option"
      >
        <input
          class="h-4 w-4 appearance-none rounded-full border border-gray-300 bg-gray-100 bg-[length:1em_1em] bg-center bg-no-repeat checked:border-transparent checked:bg-current checked:bg-dot-icon focus:outline-none focus:ring-2 focus:ring-offset-2 dark:border-gray-600 dark:bg-gray-700 dark:checked:border-transparent dark:checked:bg-current text-primary-600 focus:ring-primary-600 dark:ring-offset-gray-800 dark:focus:ring-primary-600"
          id="test-radio-button-group_test-value-2"
          name="test-radio-button-group"
          type="radio"
          value="test-value-2"
        />
        <label
          class="text-sm font-medium text-gray-900 dark:text-white pl-2 line-clamp-1"
          data-testid="flowbite-label"
          for="test-radio-button-group_test-value-2"
        >
          test-label-2
        </label>
      </div>
      <div
        class="flex items-center [&>*]:cursor-pointer"
        data-testid="udp-radio-button-group-option"
      >
        <input
          class="h-4 w-4 appearance-none rounded-full border border-gray-300 bg-gray-100 bg-[length:1em_1em] bg-center bg-no-repeat checked:border-transparent checked:bg-current checked:bg-dot-icon focus:outline-none focus:ring-2 focus:ring-offset-2 dark:border-gray-600 dark:bg-gray-700 dark:checked:border-transparent dark:checked:bg-current text-primary-600 focus:ring-primary-600 dark:ring-offset-gray-800 dark:focus:ring-primary-600"
          id="test-radio-button-group_test-value-3"
          name="test-radio-button-group"
          type="radio"
          value="test-value-3"
        />
        <label
          class="text-sm font-medium text-gray-900 dark:text-white pl-2 line-clamp-1"
          data-testid="flowbite-label"
          for="test-radio-button-group_test-value-3"
        >
          test-label-3
        </label>
      </div>
    </fieldset>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`snapshot > matches snapshot with additional classes 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <fieldset
        class="flex flex-col gap-4 pt-8"
      >
        <div
          class="flex items-center [&>*]:cursor-pointer"
          data-testid="udp-radio-button-group-option"
        >
          <input
            class="h-4 w-4 appearance-none rounded-full border border-gray-300 bg-gray-100 bg-[length:1em_1em] bg-center bg-no-repeat checked:border-transparent checked:bg-current checked:bg-dot-icon focus:outline-none focus:ring-2 focus:ring-offset-2 dark:border-gray-600 dark:bg-gray-700 dark:checked:border-transparent dark:checked:bg-current text-primary-600 focus:ring-primary-600 dark:ring-offset-gray-800 dark:focus:ring-primary-600"
            id="test-radio-button-group_test-value-1"
            name="test-radio-button-group"
            type="radio"
            value="test-value-1"
          />
          <label
            class="text-sm font-medium text-gray-900 dark:text-white pl-2 line-clamp-1"
            data-testid="flowbite-label"
            for="test-radio-button-group_test-value-1"
          >
            test-label-1
          </label>
        </div>
        <div
          class="flex items-center [&>*]:cursor-pointer"
          data-testid="udp-radio-button-group-option"
        >
          <input
            class="h-4 w-4 appearance-none rounded-full border border-gray-300 bg-gray-100 bg-[length:1em_1em] bg-center bg-no-repeat checked:border-transparent checked:bg-current checked:bg-dot-icon focus:outline-none focus:ring-2 focus:ring-offset-2 dark:border-gray-600 dark:bg-gray-700 dark:checked:border-transparent dark:checked:bg-current text-primary-600 focus:ring-primary-600 dark:ring-offset-gray-800 dark:focus:ring-primary-600"
            id="test-radio-button-group_test-value-2"
            name="test-radio-button-group"
            type="radio"
            value="test-value-2"
          />
          <label
            class="text-sm font-medium text-gray-900 dark:text-white pl-2 line-clamp-1"
            data-testid="flowbite-label"
            for="test-radio-button-group_test-value-2"
          >
            test-label-2
          </label>
        </div>
        <div
          class="flex items-center [&>*]:cursor-pointer"
          data-testid="udp-radio-button-group-option"
        >
          <input
            class="h-4 w-4 appearance-none rounded-full border border-gray-300 bg-gray-100 bg-[length:1em_1em] bg-center bg-no-repeat checked:border-transparent checked:bg-current checked:bg-dot-icon focus:outline-none focus:ring-2 focus:ring-offset-2 dark:border-gray-600 dark:bg-gray-700 dark:checked:border-transparent dark:checked:bg-current text-primary-600 focus:ring-primary-600 dark:ring-offset-gray-800 dark:focus:ring-primary-600"
            id="test-radio-button-group_test-value-3"
            name="test-radio-button-group"
            type="radio"
            value="test-value-3"
          />
          <label
            class="text-sm font-medium text-gray-900 dark:text-white pl-2 line-clamp-1"
            data-testid="flowbite-label"
            for="test-radio-button-group_test-value-3"
          >
            test-label-3
          </label>
        </div>
      </fieldset>
    </div>
  </body>,
  "container": <div>
    <fieldset
      class="flex flex-col gap-4 pt-8"
    >
      <div
        class="flex items-center [&>*]:cursor-pointer"
        data-testid="udp-radio-button-group-option"
      >
        <input
          class="h-4 w-4 appearance-none rounded-full border border-gray-300 bg-gray-100 bg-[length:1em_1em] bg-center bg-no-repeat checked:border-transparent checked:bg-current checked:bg-dot-icon focus:outline-none focus:ring-2 focus:ring-offset-2 dark:border-gray-600 dark:bg-gray-700 dark:checked:border-transparent dark:checked:bg-current text-primary-600 focus:ring-primary-600 dark:ring-offset-gray-800 dark:focus:ring-primary-600"
          id="test-radio-button-group_test-value-1"
          name="test-radio-button-group"
          type="radio"
          value="test-value-1"
        />
        <label
          class="text-sm font-medium text-gray-900 dark:text-white pl-2 line-clamp-1"
          data-testid="flowbite-label"
          for="test-radio-button-group_test-value-1"
        >
          test-label-1
        </label>
      </div>
      <div
        class="flex items-center [&>*]:cursor-pointer"
        data-testid="udp-radio-button-group-option"
      >
        <input
          class="h-4 w-4 appearance-none rounded-full border border-gray-300 bg-gray-100 bg-[length:1em_1em] bg-center bg-no-repeat checked:border-transparent checked:bg-current checked:bg-dot-icon focus:outline-none focus:ring-2 focus:ring-offset-2 dark:border-gray-600 dark:bg-gray-700 dark:checked:border-transparent dark:checked:bg-current text-primary-600 focus:ring-primary-600 dark:ring-offset-gray-800 dark:focus:ring-primary-600"
          id="test-radio-button-group_test-value-2"
          name="test-radio-button-group"
          type="radio"
          value="test-value-2"
        />
        <label
          class="text-sm font-medium text-gray-900 dark:text-white pl-2 line-clamp-1"
          data-testid="flowbite-label"
          for="test-radio-button-group_test-value-2"
        >
          test-label-2
        </label>
      </div>
      <div
        class="flex items-center [&>*]:cursor-pointer"
        data-testid="udp-radio-button-group-option"
      >
        <input
          class="h-4 w-4 appearance-none rounded-full border border-gray-300 bg-gray-100 bg-[length:1em_1em] bg-center bg-no-repeat checked:border-transparent checked:bg-current checked:bg-dot-icon focus:outline-none focus:ring-2 focus:ring-offset-2 dark:border-gray-600 dark:bg-gray-700 dark:checked:border-transparent dark:checked:bg-current text-primary-600 focus:ring-primary-600 dark:ring-offset-gray-800 dark:focus:ring-primary-600"
          id="test-radio-button-group_test-value-3"
          name="test-radio-button-group"
          type="radio"
          value="test-value-3"
        />
        <label
          class="text-sm font-medium text-gray-900 dark:text-white pl-2 line-clamp-1"
          data-testid="flowbite-label"
          for="test-radio-button-group_test-value-3"
        >
          test-label-3
        </label>
      </div>
    </fieldset>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`snapshot > matches snapshot with error messages 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <fieldset
        class="flex flex-col gap-4"
      >
        <div
          class="flex items-center [&>*]:cursor-pointer"
          data-testid="udp-radio-button-group-option"
        >
          <input
            class="h-4 w-4 appearance-none rounded-full border border-gray-300 bg-gray-100 bg-[length:1em_1em] bg-center bg-no-repeat checked:border-transparent checked:bg-current checked:bg-dot-icon focus:outline-none focus:ring-2 focus:ring-offset-2 dark:border-gray-600 dark:bg-gray-700 dark:checked:border-transparent dark:checked:bg-current text-primary-600 focus:ring-primary-600 dark:ring-offset-gray-800 dark:focus:ring-primary-600"
            id="test-radio-button-group_test-value-1"
            name="test-radio-button-group"
            type="radio"
            value="test-value-1"
          />
          <label
            class="text-sm font-medium text-gray-900 dark:text-white pl-2 line-clamp-1"
            data-testid="flowbite-label"
            for="test-radio-button-group_test-value-1"
          >
            test-label-1
          </label>
        </div>
        <div
          class="flex items-center [&>*]:cursor-pointer"
          data-testid="udp-radio-button-group-option"
        >
          <input
            class="h-4 w-4 appearance-none rounded-full border border-gray-300 bg-gray-100 bg-[length:1em_1em] bg-center bg-no-repeat checked:border-transparent checked:bg-current checked:bg-dot-icon focus:outline-none focus:ring-2 focus:ring-offset-2 dark:border-gray-600 dark:bg-gray-700 dark:checked:border-transparent dark:checked:bg-current text-primary-600 focus:ring-primary-600 dark:ring-offset-gray-800 dark:focus:ring-primary-600"
            id="test-radio-button-group_test-value-2"
            name="test-radio-button-group"
            type="radio"
            value="test-value-2"
          />
          <label
            class="text-sm font-medium text-gray-900 dark:text-white pl-2 line-clamp-1"
            data-testid="flowbite-label"
            for="test-radio-button-group_test-value-2"
          >
            test-label-2
          </label>
        </div>
        <div
          class="flex items-center [&>*]:cursor-pointer"
          data-testid="udp-radio-button-group-option"
        >
          <input
            class="h-4 w-4 appearance-none rounded-full border border-gray-300 bg-gray-100 bg-[length:1em_1em] bg-center bg-no-repeat checked:border-transparent checked:bg-current checked:bg-dot-icon focus:outline-none focus:ring-2 focus:ring-offset-2 dark:border-gray-600 dark:bg-gray-700 dark:checked:border-transparent dark:checked:bg-current text-primary-600 focus:ring-primary-600 dark:ring-offset-gray-800 dark:focus:ring-primary-600"
            id="test-radio-button-group_test-value-3"
            name="test-radio-button-group"
            type="radio"
            value="test-value-3"
          />
          <label
            class="text-sm font-medium text-gray-900 dark:text-white pl-2 line-clamp-1"
            data-testid="flowbite-label"
            for="test-radio-button-group_test-value-3"
          >
            test-label-3
          </label>
        </div>
        <div
          class="text-red-700 text-sm"
        >
          <span>
            error #1
            <br />
          </span>
          <span>
            error #2
            <br />
          </span>
        </div>
      </fieldset>
    </div>
  </body>,
  "container": <div>
    <fieldset
      class="flex flex-col gap-4"
    >
      <div
        class="flex items-center [&>*]:cursor-pointer"
        data-testid="udp-radio-button-group-option"
      >
        <input
          class="h-4 w-4 appearance-none rounded-full border border-gray-300 bg-gray-100 bg-[length:1em_1em] bg-center bg-no-repeat checked:border-transparent checked:bg-current checked:bg-dot-icon focus:outline-none focus:ring-2 focus:ring-offset-2 dark:border-gray-600 dark:bg-gray-700 dark:checked:border-transparent dark:checked:bg-current text-primary-600 focus:ring-primary-600 dark:ring-offset-gray-800 dark:focus:ring-primary-600"
          id="test-radio-button-group_test-value-1"
          name="test-radio-button-group"
          type="radio"
          value="test-value-1"
        />
        <label
          class="text-sm font-medium text-gray-900 dark:text-white pl-2 line-clamp-1"
          data-testid="flowbite-label"
          for="test-radio-button-group_test-value-1"
        >
          test-label-1
        </label>
      </div>
      <div
        class="flex items-center [&>*]:cursor-pointer"
        data-testid="udp-radio-button-group-option"
      >
        <input
          class="h-4 w-4 appearance-none rounded-full border border-gray-300 bg-gray-100 bg-[length:1em_1em] bg-center bg-no-repeat checked:border-transparent checked:bg-current checked:bg-dot-icon focus:outline-none focus:ring-2 focus:ring-offset-2 dark:border-gray-600 dark:bg-gray-700 dark:checked:border-transparent dark:checked:bg-current text-primary-600 focus:ring-primary-600 dark:ring-offset-gray-800 dark:focus:ring-primary-600"
          id="test-radio-button-group_test-value-2"
          name="test-radio-button-group"
          type="radio"
          value="test-value-2"
        />
        <label
          class="text-sm font-medium text-gray-900 dark:text-white pl-2 line-clamp-1"
          data-testid="flowbite-label"
          for="test-radio-button-group_test-value-2"
        >
          test-label-2
        </label>
      </div>
      <div
        class="flex items-center [&>*]:cursor-pointer"
        data-testid="udp-radio-button-group-option"
      >
        <input
          class="h-4 w-4 appearance-none rounded-full border border-gray-300 bg-gray-100 bg-[length:1em_1em] bg-center bg-no-repeat checked:border-transparent checked:bg-current checked:bg-dot-icon focus:outline-none focus:ring-2 focus:ring-offset-2 dark:border-gray-600 dark:bg-gray-700 dark:checked:border-transparent dark:checked:bg-current text-primary-600 focus:ring-primary-600 dark:ring-offset-gray-800 dark:focus:ring-primary-600"
          id="test-radio-button-group_test-value-3"
          name="test-radio-button-group"
          type="radio"
          value="test-value-3"
        />
        <label
          class="text-sm font-medium text-gray-900 dark:text-white pl-2 line-clamp-1"
          data-testid="flowbite-label"
          for="test-radio-button-group_test-value-3"
        >
          test-label-3
        </label>
      </div>
      <div
        class="text-red-700 text-sm"
      >
        <span>
          error #1
          <br />
        </span>
        <span>
          error #2
          <br />
        </span>
      </div>
    </fieldset>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`snapshot > matches snapshot with preselection 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <fieldset
        class="flex flex-col gap-4"
      >
        <div
          class="flex items-center [&>*]:cursor-pointer"
          data-testid="udp-radio-button-group-option"
        >
          <input
            class="h-4 w-4 appearance-none rounded-full border border-gray-300 bg-gray-100 bg-[length:1em_1em] bg-center bg-no-repeat checked:border-transparent checked:bg-current checked:bg-dot-icon focus:outline-none focus:ring-2 focus:ring-offset-2 dark:border-gray-600 dark:bg-gray-700 dark:checked:border-transparent dark:checked:bg-current text-primary-600 focus:ring-primary-600 dark:ring-offset-gray-800 dark:focus:ring-primary-600"
            id="test-radio-button-group_test-value-1"
            name="test-radio-button-group"
            type="radio"
            value="test-value-1"
          />
          <label
            class="text-sm font-medium text-gray-900 dark:text-white pl-2 line-clamp-1"
            data-testid="flowbite-label"
            for="test-radio-button-group_test-value-1"
          >
            test-label-1
          </label>
        </div>
        <div
          class="flex items-center [&>*]:cursor-pointer"
          data-testid="udp-radio-button-group-option"
        >
          <input
            class="h-4 w-4 appearance-none rounded-full border border-gray-300 bg-gray-100 bg-[length:1em_1em] bg-center bg-no-repeat checked:border-transparent checked:bg-current checked:bg-dot-icon focus:outline-none focus:ring-2 focus:ring-offset-2 dark:border-gray-600 dark:bg-gray-700 dark:checked:border-transparent dark:checked:bg-current text-primary-600 focus:ring-primary-600 dark:ring-offset-gray-800 dark:focus:ring-primary-600"
            id="test-radio-button-group_test-value-2"
            name="test-radio-button-group"
            type="radio"
            value="test-value-2"
          />
          <label
            class="text-sm font-medium text-gray-900 dark:text-white pl-2 line-clamp-1"
            data-testid="flowbite-label"
            for="test-radio-button-group_test-value-2"
          >
            test-label-2
          </label>
        </div>
        <div
          class="flex items-center [&>*]:cursor-pointer"
          data-testid="udp-radio-button-group-option"
        >
          <input
            class="h-4 w-4 appearance-none rounded-full border border-gray-300 bg-gray-100 bg-[length:1em_1em] bg-center bg-no-repeat checked:border-transparent checked:bg-current checked:bg-dot-icon focus:outline-none focus:ring-2 focus:ring-offset-2 dark:border-gray-600 dark:bg-gray-700 dark:checked:border-transparent dark:checked:bg-current text-primary-600 focus:ring-primary-600 dark:ring-offset-gray-800 dark:focus:ring-primary-600"
            id="test-radio-button-group_test-value-3"
            name="test-radio-button-group"
            type="radio"
            value="test-value-3"
          />
          <label
            class="text-sm font-medium text-gray-900 dark:text-white pl-2 line-clamp-1"
            data-testid="flowbite-label"
            for="test-radio-button-group_test-value-3"
          >
            test-label-3
          </label>
        </div>
      </fieldset>
    </div>
  </body>,
  "container": <div>
    <fieldset
      class="flex flex-col gap-4"
    >
      <div
        class="flex items-center [&>*]:cursor-pointer"
        data-testid="udp-radio-button-group-option"
      >
        <input
          class="h-4 w-4 appearance-none rounded-full border border-gray-300 bg-gray-100 bg-[length:1em_1em] bg-center bg-no-repeat checked:border-transparent checked:bg-current checked:bg-dot-icon focus:outline-none focus:ring-2 focus:ring-offset-2 dark:border-gray-600 dark:bg-gray-700 dark:checked:border-transparent dark:checked:bg-current text-primary-600 focus:ring-primary-600 dark:ring-offset-gray-800 dark:focus:ring-primary-600"
          id="test-radio-button-group_test-value-1"
          name="test-radio-button-group"
          type="radio"
          value="test-value-1"
        />
        <label
          class="text-sm font-medium text-gray-900 dark:text-white pl-2 line-clamp-1"
          data-testid="flowbite-label"
          for="test-radio-button-group_test-value-1"
        >
          test-label-1
        </label>
      </div>
      <div
        class="flex items-center [&>*]:cursor-pointer"
        data-testid="udp-radio-button-group-option"
      >
        <input
          class="h-4 w-4 appearance-none rounded-full border border-gray-300 bg-gray-100 bg-[length:1em_1em] bg-center bg-no-repeat checked:border-transparent checked:bg-current checked:bg-dot-icon focus:outline-none focus:ring-2 focus:ring-offset-2 dark:border-gray-600 dark:bg-gray-700 dark:checked:border-transparent dark:checked:bg-current text-primary-600 focus:ring-primary-600 dark:ring-offset-gray-800 dark:focus:ring-primary-600"
          id="test-radio-button-group_test-value-2"
          name="test-radio-button-group"
          type="radio"
          value="test-value-2"
        />
        <label
          class="text-sm font-medium text-gray-900 dark:text-white pl-2 line-clamp-1"
          data-testid="flowbite-label"
          for="test-radio-button-group_test-value-2"
        >
          test-label-2
        </label>
      </div>
      <div
        class="flex items-center [&>*]:cursor-pointer"
        data-testid="udp-radio-button-group-option"
      >
        <input
          class="h-4 w-4 appearance-none rounded-full border border-gray-300 bg-gray-100 bg-[length:1em_1em] bg-center bg-no-repeat checked:border-transparent checked:bg-current checked:bg-dot-icon focus:outline-none focus:ring-2 focus:ring-offset-2 dark:border-gray-600 dark:bg-gray-700 dark:checked:border-transparent dark:checked:bg-current text-primary-600 focus:ring-primary-600 dark:ring-offset-gray-800 dark:focus:ring-primary-600"
          id="test-radio-button-group_test-value-3"
          name="test-radio-button-group"
          type="radio"
          value="test-value-3"
        />
        <label
          class="text-sm font-medium text-gray-900 dark:text-white pl-2 line-clamp-1"
          data-testid="flowbite-label"
          for="test-radio-button-group_test-value-3"
        >
          test-label-3
        </label>
      </div>
    </fieldset>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
